fix everything
cuz im dumb